Webform: Added group booking feature